# worldforge

./: .all-contributorsrc  .coderabbit.yaml  .env.example  .gitignore  .pr_agent.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SPECIFICATION.md  SUPPORT.md  agents.md  best_practices.md  deny.toml  mkdocs.yml  pr_compliance_checklist.yaml  pyproject.toml
.cargo/: config.toml
.codex/skills/: _index.md  evaluation-benchmarking.md  optional-runtime-smokes.md  persistence-state.md  provider-adapter-development.md  provider-integration.md  rust-development.md  specification-driven-dev.md  testing-strategy.md  testing-validation.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  eval_benchmark.yml  provider_adapter.yml
.github/workflows/: ci.yml  pages.yml  python-package.yml  release.yml  security.yml
architecture/: ADR.md
business/: BUSINESS_PLAN.md
crates/worldforge-auth/: Cargo.toml
crates/worldforge-auth/src/: api_key.rs  jwt.rs  lib.rs  middleware.rs  rbac.rs
crates/worldforge-cli/: Cargo.toml
crates/worldforge-cli/src/: lib.rs  main.rs
crates/worldforge-core/: Cargo.toml
crates/worldforge-core/benches/: performance.rs
crates/worldforge-core/proptest-regressions/: types.txt
crates/worldforge-core/src/: action.rs  bootstrap.rs  error.rs  goal_image.rs  guardrail.rs  lib.rs  planner.rs  prediction.rs  proof.rs  provider.rs  scene.rs  state.rs  types.rs  world.rs
crates/worldforge-core/tests/: integration.rs
crates/worldforge-eval/: Cargo.toml
crates/worldforge-eval/benches/: suite.rs
crates/worldforge-eval/src/: async_utils.rs  datasets.rs  lib.rs  metrics.rs  wrarena.rs
crates/worldforge-eval/tests/: integration.rs
crates/worldforge-media/: Cargo.toml
crates/worldforge-media/src/: clip.rs  codec.rs  error.rs  frame_io.rs  lib.rs  tensor_io.rs
crates/worldforge-media/tests/: integration.rs
crates/worldforge-physics/: Cargo.toml
crates/worldforge-physics/src/: lib.rs  spatial.rs  validation.rs  world.rs
crates/worldforge-providers/: Cargo.toml
crates/worldforge-providers/benches/: adapters.rs
crates/worldforge-providers/src/: async_job.rs  cosmos.rs  genie.rs  http_client.rs  jepa.rs  kling.rs  lib.rs  marble.rs  minimax.rs  mock.rs  native_planning.rs  pan.rs  polling.rs  rate_limit.rs  retry.rs  runway.rs  sora.rs  veo.rs  video_download.rs
crates/worldforge-providers/tests/: integration.rs
crates/worldforge-python/: Cargo.toml
crates/worldforge-python/src/: lib.rs
crates/worldforge-server/: Cargo.toml
crates/worldforge-server/src/: lib.rs  main.rs
crates/worldforge-server/tests/: integration.rs
crates/worldforge-verify/: Cargo.toml
crates/worldforge-verify/benches/: proofs.rs
crates/worldforge-verify/src/: lib.rs
docs/: book.toml
docs/business/: business_case_thesis_draft.md  business_case_thesis_final.md  pitch_deck.md
docs/src/: SUMMARY.md  architecture.md  benchmarking.md  changelog.md  citation.md  cli.md  contributing.md  evaluation.md  examples.md  index.html  introduction.md  operations.md  playbooks.md  provider-authoring-guide.md  provider-platform-roadmap.md  provider-selection-rfc.md  quality.md  quickstart.md  rerun.md  roadmap-continuation.md  roadmap.md  robotics-showcase-deep-dive.md  robotics-showcase.md  (+4 more)
examples/: README.md  basic_prediction.py  basic_prediction.rs  benchmark-budget.json  benchmark-inputs.json  cross_provider_compare.py  cross_provider_compare.rs  lerobot_e2e_demo.py  leworldmodel_e2e_demo.py  runway-generate-benchmark-inputs.json  runway-transfer-benchmark-inputs.json
go-to-market/: 90_DAY_SPRINT.md
notes/: langchain-analysis.md
research/: EVALUATION_DIMENSIONS.md  IMPLEMENTATION_PLAN.md  MARKET_INTELLIGENCE.md  PROVIDER_CATALOG.md  WR_ARENA_ANALYSIS.md
rfcs/: RFC-0000-overview.md  RFC-0001-provider-integration-protocol.md  RFC-0002-nvidia-cosmos-provider.md  RFC-0003-runway-provider.md  RFC-0004-meta-vjepa-provider.md  RFC-0005-openai-sora-provider.md  RFC-0006-google-veo-provider.md  RFC-0007-state-management.md  RFC-0008-evaluation-framework.md  RFC-0009-python-sdk.md  RFC-0010-api-hardening.md  RFC-0011-zk-verification.md  RFC-0012-documentation.md  RFC-0013-cicd-pipeline.md  RFC-0014-cloud-service.md  RFC-0015-billing-metering.md  RFC-0016-planning-system.md  RFC-0017-scene-physics.md  RFC-0018-video-io.md  RFC-0019-security-auth.md  RFC-0020-observability.md
scripts/: check_distribution.py  check_no_egress_in_harness.py  check_no_hex_in_widget_css.py  generate_provider_docs.py  generate_release_evidence.py  lewm-lerobot-real  lewm-real  regen-harness-screenshot.sh  robotics-showcase  scaffold_provider.py  smoke_cosmos_policy.py  smoke_gr00t_policy.py  smoke_jepa_wms.py  smoke_lerobot_leworldmodel.py  smoke_lerobot_policy.py  smoke_leworldmodel.py  test_package.sh  test_python_package.sh
tests/: conftest.py  test_batch_eval_host.py  test_benchmark.py  test_capability_dual_routing.py  test_capability_protocols.py  test_cli_doctor.py  test_cli_help_snapshots.py  test_cli_world_commands.py  test_cosmos_policy_provider.py  test_cosmos_policy_smoke_script.py  test_cosmos_smoke_script.py  test_docs_site.py  test_evaluation_and_planning.py  test_examples_index.py  test_gr00t_provider.py  test_gr00t_smoke_script.py  test_harness_cli.py  test_harness_flows.py  test_harness_guards.py  test_harness_snapshots.py  test_harness_tui.py  test_harness_workspace.py  test_harness_worlds_view.py  test_helper_validations.py  test_http_utils.py  test_jepa_provider.py  test_jepa_wms_provider.py  test_lerobot_e2e_demo.py  test_lerobot_leworldmodel_smoke_script.py  test_lerobot_provider.py  test_lerobot_smoke_script.py  test_leworldmodel_e2e_demo.py  test_leworldmodel_provider.py  test_leworldmodel_smoke_script.py  test_leworldmodel_uv_tasks.py  test_observability.py  test_observability_metrics_export.py  test_observability_opentelemetry.py  test_package_contract_script.py  test_provider_catalog.py  (+20 more)
(+151 files in other folders)
