[workspace]
resolver = "2"
members = [
    "crates/worldforge-core",
    "crates/worldforge-providers",
    "crates/worldforge-eval",
    "crates/worldforge-verify",
    "crates/worldforge-server",
    "crates/worldforge-cli",
    "crates/worldforge-python",
    "crates/worldforge-media",
    "crates/worldforge-auth",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
homepage = "https://worldforge.ai"
repository = "https://github.com/AbdelStark/worldforge"
description = "The orchestration layer for world foundation models"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"  # MessagePack for efficient binary serialization

# HTTP client for provider APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# ML framework
burn = { version = "0.16", features = ["ndarray", "wgpu"] }
safetensors = "0.4"

# Image/media
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Database (state persistence)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Python bindings
pyo3 = { version = "0.22", features = ["auto-initialize"] }

# ZK proofs (optional, for verify module)
# cairo-felt = "0.9"
# stark-felt = "0.1"

# Testing
proptest = "1"
criterion = "0.5"
