[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "worldforge"
version = "0.3.0"
description = "Integration layer for physical-AI world-model providers, planning, evaluation, and diagnostics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "WorldForge contributors" }]
dependencies = [
    "httpx>=0.27,<1.0",
]
keywords = [
    "world-models",
    "physical-ai",
    "robotics",
    "simulation",
    "planning",
    "evaluation",
    "ai-framework",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/AbdelStark/worldforge"
Documentation = "https://github.com/AbdelStark/worldforge/tree/main/docs"
Issues = "https://github.com/AbdelStark/worldforge/issues"

[project.scripts]
worldforge = "worldforge.cli:main"
worldforge-harness = "worldforge.harness.cli:main"
worldforge-demo-leworldmodel = "worldforge.demos.leworldmodel_e2e:main"
worldforge-demo-lerobot = "worldforge.demos.lerobot_e2e:main"
worldforge-build-leworldmodel-checkpoint = "worldforge.smoke.leworldmodel_checkpoint:main"
worldforge-smoke-leworldmodel = "worldforge.smoke.leworldmodel:main"

[project.optional-dependencies]
harness = [
    "textual>=8.2,<9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worldforge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/docs",
    "/scripts",
    "/AGENTS.md",
    "/CHANGELOG.md",
    "/README.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/Makefile",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
