[package]
name = "worldforge-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldForge security and authentication infrastructure"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = "9"
worldforge-core = { path = "../worldforge-core" }

[dev-dependencies]
serde_json = { workspace = true }
