[package]
name = "worldforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldForge CLI tool"

[[bin]]
name = "worldforge"
path = "src/main.rs"

[dependencies]
worldforge-core = { path = "../worldforge-core" }
worldforge-providers = { path = "../worldforge-providers" }
worldforge-eval = { path = "../worldforge-eval" }
worldforge-server = { path = "../worldforge-server" }
worldforge-verify = { path = "../worldforge-verify" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
