[package]
name = "worldforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldForge core library - orchestration layer for world foundation models"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
