[package]
name = "worldforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldForge core library - orchestration layer for world foundation models"

[features]
default = []
sqlite = ["sqlx"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
worldforge-providers = { path = "../worldforge-providers" }
sqlx = { workspace = true }

[[bench]]
name = "performance"
harness = false
