[package]
name = "worldforge-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldForge evaluation framework for world foundation models"

[dependencies]
worldforge-core = { path = "../worldforge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
worldforge-providers = { path = "../worldforge-providers" }
proptest = { workspace = true }

[[bench]]
name = "suite"
harness = false
