[package]
name = "worldforge-media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Media I/O for WorldForge — frame encode/decode, tensor serialization, video clip assembly"

[features]
default = []
ffmpeg = [] # Feature-gated ffmpeg codec backend (stub)

[dependencies]
worldforge-core = { path = "../worldforge-core" }
image = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
