[package]
name = "worldforge-physics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight physics simulation engine for WorldForge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
worldforge-core = { path = "../worldforge-core" }

[dev-dependencies]
proptest = { workspace = true }
