[package]
name = "worldforge-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldForge provider adapters for world foundation models"

[dependencies]
worldforge-core = { path = "../worldforge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
