[package]
name = "worldforge-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldForge provider adapters for world foundation models"

[dependencies]
worldforge-core = { path = "../worldforge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[features]
default = []
onnx-inference = ["dep:ort", "dep:ndarray"]

[dependencies.ort]
version = "2.0.0-rc.12"
optional = true

[dependencies.ndarray]
version = "0.16"
optional = true

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "adapters"
harness = false
