[package]
name = "worldforge-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for WorldForge via PyO3"

[lib]
name = "worldforge"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable extension-module only when building the Python wheel
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true }
worldforge-core = { path = "../worldforge-core", features = ["sqlite"] }
worldforge-providers = { path = "../worldforge-providers" }
worldforge-eval = { path = "../worldforge-eval" }
worldforge-verify = { path = "../worldforge-verify" }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
