[package]
name = "worldforge-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorldForge ZK verification layer (optional)"

[dependencies]
worldforge-core = { path = "../worldforge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "proofs"
harness = false
